tests/error/name_conflict.gw
#! [contains] conflicts with previously defined value
class C {
  var int test;
}

class D extends C {
  fun int test() {}
}
